# leetcode

./: .gitignore  Cargo.toml  docker-compose.yml
db/: 1_init.sql  2_create.sql
falling-squares/: Cargo.toml
falling-squares/src/: main.rs
problems/add-digits/: Cargo.toml
problems/add-minimum-number-of-rungs/: Cargo.toml
problems/add-one-row-to-tree/: Cargo.toml
problems/add-strings/: Cargo.toml
problems/add-two-numbers-ii/: Cargo.toml
problems/adding-two-negabinary-numbers/: Cargo.toml
problems/additive-number/: Cargo.toml
problems/advantage-shuffle/: Cargo.toml
problems/airplane-seat-assignment-probability/: Cargo.toml
problems/alert-using-same-key-card-three-or-more-times-in-a-one-hour-period/: Cargo.toml
problems/all-nodes-distance-k-in-binary-tree/: Cargo.toml
problems/all-oone-data-structure/: Cargo.toml
problems/all-possible-full-binary-trees/: Cargo.toml
problems/allocate-mailboxes/: Cargo.toml
problems/alphabet-board-path/: Cargo.toml
problems/ambiguous-coordinates/: Cargo.toml
problems/apple-redistribution-into-boxes/: Cargo.toml
problems/apply-discount-every-n-orders/: Cargo.toml
problems/arithmetic-slices/: Cargo.toml
problems/arithmetic-subarrays/: Cargo.toml
problems/array-nesting/: Cargo.toml
problems/array-of-doubled-pairs/: Cargo.toml
problems/array-partition-i/: Cargo.toml
problems/array-with-elements-not-equal-to-average-of-neighbors/: Cargo.toml
problems/assign-cookies/: Cargo.toml
problems/asteroid-collision/: Cargo.toml
problems/available-captures-for-rook/: Cargo.toml
problems/average-of-levels-in-binary-tree/: Cargo.toml
problems/average-salary-excluding-the-minimum-and-maximum-salary/: Cargo.toml
problems/avoid-flood-in-the-city/: Cargo.toml
problems/balanced-binary-tree/: Cargo.toml
problems/base-7/: Cargo.toml
problems/baseball-game/: Cargo.toml
problems/basic-calculator-ii/: Cargo.toml
problems/basic-calculator-iv/: Cargo.toml
problems/battleships-in-a-board/: Cargo.toml
problems/beautiful-arrangement/: Cargo.toml
problems/beautiful-arrangement-ii/: Cargo.toml
problems/beautiful-array/: Cargo.toml
problems/best-position-for-a-service-centre/: Cargo.toml
problems/best-team-with-no-conflicts/: Cargo.toml
problems/best-time-to-buy-and-sell-stock/: Cargo.toml
problems/best-time-to-buy-and-sell-stock-iv/: Cargo.toml
problems/best-time-to-buy-and-sell-stock-with-cooldown/: Cargo.toml
problems/best-time-to-buy-and-sell-stock-with-transaction-fee/: Cargo.toml
problems/binary-number-with-alternating-bits/: Cargo.toml
problems/binary-search-tree-iterator/: Cargo.toml
problems/binary-string-with-substrings-representing-1-to-n/: Cargo.toml
problems/binary-tree-coloring-game/: Cargo.toml
problems/binary-tree-inorder-traversal/: Cargo.toml
problems/binary-tree-level-order-traversal/: Cargo.toml
problems/binary-tree-level-order-traversal-ii/: Cargo.toml
problems/binary-tree-paths/: Cargo.toml
problems/binary-tree-postorder-traversal/: Cargo.toml
problems/binary-tree-preorder-traversal/: Cargo.toml
problems/binary-tree-pruning/: Cargo.toml
problems/binary-tree-right-side-view/: Cargo.toml
problems/binary-tree-zigzag-level-order-traversal/: Cargo.toml
problems/binary-trees-with-factors/: Cargo.toml
problems/binary-watch/: Cargo.toml
problems/bitwise-and-of-numbers-range/: Cargo.toml
problems/bitwise-ors-of-subarrays/: Cargo.toml
problems/brace-expansion-ii/: Cargo.toml
problems/brick-wall/: Cargo.toml
problems/bricks-falling-when-hit/: Cargo.toml
problems/broken-calculator/: Cargo.toml
problems/buddy-strings/: Cargo.toml
problems/build-an-array-with-stack-operations/: Cargo.toml
problems/build-array-from-permutation/: Cargo.toml
shell/: tenth-line.bash  transpose-file.bash  valid-phone-numbers.bash  word-frequency.bash
sql/: actors-and-directors-who-cooperated-at-least-three-times.sql  article-views-i.sql  average-selling-price.sql  average-time-of-process-per-machine.sql  bank-account-summary-ii.sql  big-countries.sql  biggest-single-number.sql  calculate-special-bonus.sql  capital-gainloss.sql  classes-more-than-5-students.sql  combine-two-tables.sql  confirmation-rate.sql  consecutive-numbers.sql  count-salary-categories.sql  customer-placing-the-largest-number-of-orders.sql  customer-who-visited-but-did-not-make-any-transactions.sql  customers-who-never-order.sql  daily-leads-and-partners.sql  delete-duplicate-emails.sql  department-highest-salary.sql  department-top-three-salaries.sql  duplicate-emails.sql  employee-bonus.sql  employees-earning-more-than-their-managers.sql  employees-whose-manager-left-the-company.sql  employees-with-missing-information.sql  exchange-seats.sql  find-customer-referee.sql  find-followers-count.sql  find-total-time-spent-by-each-employee.sql  find-users-with-valid-e-mails.sql  fix-names-in-a-table.sql  friend-requests-ii-who-has-the-most-friends.sql  game-play-analysis-i.sql  game-play-analysis-iv.sql  group-sold-products-by-the-date.sql  human-traffic-of-stadium.sql  immediate-food-delivery-i.sql  invalid-tweets.sql  investments-in-2016.sql  (+35 more)
src/: 01-matrix.rs  1-bit-and-2-bit-characters.rs  132-pattern.rs  2-keys-keyboard.rs  24-game.rs  3sum-closest.rs  3sum-with-multiplicity.rs  3sum.rs  4sum-ii.rs  4sum.rs  add-digits.rs  add-strings.rs  add-two-numbers-ii.rs  additive-number.rs  arithmetic-slices-ii-subsequence.rs  arranging-coins.rs  balanced-binary-tree.rs  basic-calculator.rs  best-time-to-buy-and-sell-stock-ii.rs  best-time-to-buy-and-sell-stock-iii.rs  binary-search-tree-iterator.rs  binary-tree-inorder-traversal.rs  binary-tree-level-order-traversal.rs  binary-tree-maximum-path-sum.rs  binary-tree-paths.rs  binary-tree-postorder-traversal.rs  binary-tree-right-side-view.rs  binary-tree-zigzag-level-order-traversal.rs  binary-watch.rs  bitwise-and-of-numbers-range.rs  bulb-switcher.rs  bulls-and-cows.rs  burst-balloons.rs  circular-array-loop.rs  climbing-stairs.rs  coin-change.rs  combination-sum-ii.rs  combination-sum-iv.rs  combination-sum.rs  combinations.rs  (+202 more)
(+2857 files in other folders)
