[package]
name = "leetcode"
version = "0.1.0"
authors = ["akaishi <galigalikun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "two-sum"
path = "src/two-sum.rs"

[[bin]]
name = "add-two-numbers"
path = "src/add-two-numbers.rs"

[[bin]]
name = "longest-substring-without-repeating-characters"
path = "src/longest-substring-without-repeating-characters.rs"

[[bin]]
name = "median-of-two-sorted-arrays"
path = "src/median-of-two-sorted-arrays.rs"

[[bin]]
name = "longest-palindromic-substring"
path = "src/longest-palindromic-substring.rs"

[[bin]]
name = "zigzag-conversion"
path = "src/zigzag-conversion.rs"

[[bin]]
name = "reverse-integer"
path = "src/reverse-integer.rs"

[[bin]]
name = "string-to-integer-atoi"
path = "src/string-to-integer-atoi.rs"

[[bin]]
name = "palindrome-number"
path = "src/palindrome-number.rs"

[[bin]]
name = "regular-expression-matching"
path = "src/regular-expression-matching.rs"

[[bin]]
name = "container-with-most-water"
path = "src/container-with-most-water.rs"

[[bin]]
name = "integer-to-roman"
path = "src/integer-to-roman.rs"

[[bin]]
name = "roman-to-integer"
path = "src/roman-to-integer.rs"

[[bin]]
name = "longest-common-prefix"
path = "src/longest-common-prefix.rs"

[[bin]]
name = "3sum"
path = "src/3sum.rs"

[[bin]]
name = "3sum-closest"
path = "src/3sum-closest.rs"

[[bin]]
name = "4sum"
path = "src/4sum.rs"

[[bin]]
name = "letter-combinations-of-a-phone-number"
path = "src/letter-combinations-of-a-phone-number.rs"

[[bin]]
name = "remove-nth-node-from-end-of-list"
path = "src/remove-nth-node-from-end-of-list.rs"

[[bin]]
name = "valid-parentheses"
path = "src/valid-parentheses.rs"

[[bin]]
name = "merge-two-sorted-lists"
path = "src/merge-two-sorted-lists.rs"

[[bin]]
name = "generate-parentheses"
path = "src/generate-parentheses.rs"

[[bin]]
name = "merge-k-sorted-lists"
path = "src/merge-k-sorted-lists.rs"

[[bin]]
name = "swap-nodes-in-pairs"
path = "src/swap-nodes-in-pairs.rs"

[[bin]]
name = "reverse-nodes-in-k-group"
path = "src/reverse-nodes-in-k-group.rs"

[[bin]]
name = "remove-duplicates-from-sorted-array"
path = "src/remove-duplicates-from-sorted-array.rs"

[[bin]]
name = "remove-element"
path = "src/remove-element.rs"

[[bin]]
name = "implement-strstr"
path = "src/implement-strstr.rs"

[[bin]]
name = "divide-two-integers"
path = "src/divide-two-integers.rs"

[[bin]]
name = "next-permutation"
path = "src/next-permutation.rs"

[[bin]]
name = "substring-with-concatenation-of-all-words"
path = "src/substring-with-concatenation-of-all-words.rs"

[[bin]]
name = "longest-valid-parentheses"
path = "src/longest-valid-parentheses.rs"

[[bin]]
name = "search-in-rotated-sorted-array"
path = "src/search-in-rotated-sorted-array.rs"

[[bin]]
name = "find-first-and-last-position-of-element-in-sorted-array"
path = "src/find-first-and-last-position-of-element-in-sorted-array.rs"

[[bin]]
name = "search-insert-position"
path = "src/search-insert-position.rs"

[[bin]]
name = "valid-sudoku"
path = "src/valid-sudoku.rs"

[[bin]]
name = "sudoku-solver"
path = "src/sudoku-solver.rs"

[[bin]]
name = "count-and-say"
path = "src/count-and-say.rs"

[[bin]]
name = "combination-sum"
path = "src/combination-sum.rs"

[[bin]]
name = "combination-sum-ii"
path = "src/combination-sum-ii.rs"

[[bin]]
name = "first-missing-positive"
path = "src/first-missing-positive.rs"

[[bin]]
name = "trapping-rain-water"
path = "src/trapping-rain-water.rs"

[[bin]]
name = "multiply-strings"
path = "src/multiply-strings.rs"

[[bin]]
name = "wildcard-matching"
path = "src/wildcard-matching.rs"

[[bin]]
name = "jump-game-ii"
path = "src/jump-game-ii.rs"

[[bin]]
name = "merge-intervals"
path = "src/merge-intervals.rs"

[[bin]]
name = "insert-interval"
path = "src/insert-interval.rs"

[[bin]]
name = "maximum-subarray"
path = "src/maximum-subarray.rs"

[[bin]]
name = "spiral-matrix"
path = "src/spiral-matrix.rs"

[[bin]]
name = "jump-game"
path = "src/jump-game.rs"

[[bin]]
name = "permutations"
path = "src/permutations.rs"

[[bin]]
name = "permutations-ii"
path = "src/permutations-ii.rs"

[[bin]]
name = "length-of-last-word"
path = "src/length-of-last-word.rs"

[[bin]]
name = "spiral-matrix-ii"
path = "src/spiral-matrix-ii.rs"

[[bin]]
name = "permutation-sequence"
path = "src/permutation-sequence.rs"

[[bin]]
name = "rotate-list"
path = "src/rotate-list.rs"

[[bin]]
name = "unique-paths"
path = "src/unique-paths.rs"

[[bin]]
name = "unique-paths-ii"
path = "src/unique-paths-ii.rs"

[[bin]]
name = "minimum-path-sum"
path = "src/minimum-path-sum.rs"

[[bin]]
name = "valid-number"
path = "src/valid-number.rs"

[[bin]]
name = "plus-one"
path = "src/plus-one.rs"

[[bin]]
name = "add-binary"
path = "src/add-binary.rs"

[[bin]]
name = "text-justification"
path = "src/text-justification.rs"

[[bin]]
name = "sqrtx"
path = "src/sqrtx.rs"

[[bin]]
name = "climbing-stairs"
path = "src/climbing-stairs.rs"

[[bin]]
name = "simplify-path"
path = "src/simplify-path.rs"

[[bin]]
name = "edit-distance"
path = "src/edit-distance.rs"

[[bin]]
name = "set-matrix-zeroes"
path = "src/set-matrix-zeroes.rs"

[[bin]]
name = "search-a-2d-matrix"
path = "src/search-a-2d-matrix.rs"

[[bin]]
name = "sort-colors"
path = "src/sort-colors.rs"

[[bin]]
name = "minimum-window-substring"
path = "src/minimum-window-substring.rs"

[[bin]]
name = "combinations"
path = "src/combinations.rs"

[[bin]]
name = "subsets"
path = "src/subsets.rs"

[[bin]]
name = "word-search"
path = "src/word-search.rs"

[[bin]]
name = "remove-duplicates-from-sorted-array-ii"
path = "src/remove-duplicates-from-sorted-array-ii.rs"

[[bin]]
name = "search-in-rotated-sorted-array-ii"
path = "src/search-in-rotated-sorted-array-ii.rs"

[[bin]]
name = "remove-duplicates-from-sorted-list-ii"
path = "src/remove-duplicates-from-sorted-list-ii.rs"

[[bin]]
name = "remove-duplicates-from-sorted-list"
path = "src/remove-duplicates-from-sorted-list.rs"

[[bin]]
name = "largest-rectangle-in-histogram"
path = "src/largest-rectangle-in-histogram.rs"

[[bin]]
name = "maximal-rectangle"
path = "src/maximal-rectangle.rs"

[[bin]]
name = "partition-list"
path = "src/partition-list.rs"

[[bin]]
name = "scramble-string"
path = "src/scramble-string.rs"

[[bin]]
name = "merge-sorted-array"
path = "src/merge-sorted-array.rs"

[[bin]]
name = "gray-code"
path = "src/gray-code.rs"

[[bin]]
name = "subsets-ii"
path = "src/subsets-ii.rs"

[[bin]]
name = "decode-ways"
path = "src/decode-ways.rs"

[[bin]]
name = "reverse-linked-list-ii"
path = "src/reverse-linked-list-ii.rs"

[[bin]]
name = "restore-ip-addresses"
path = "src/restore-ip-addresses.rs"

[[bin]]
name = "binary-tree-inorder-traversal"
path = "src/binary-tree-inorder-traversal.rs"

[[bin]]
name = "unique-binary-search-trees-ii"
path = "src/unique-binary-search-trees-ii.rs"

[[bin]]
name = "unique-binary-search-trees"
path = "src/unique-binary-search-trees.rs"

[[bin]]
name = "interleaving-string"
path = "src/interleaving-string.rs"

[[bin]]
name = "validate-binary-search-tree"
path = "src/validate-binary-search-tree.rs"

[[bin]]
name = "recover-binary-search-tree"
path = "src/recover-binary-search-tree.rs"

[[bin]]
name = "same-tree"
path = "src/same-tree.rs"

[[bin]]
name = "symmetric-tree"
path = "src/symmetric-tree.rs"

[[bin]]
name = "binary-tree-level-order-traversal"
path = "src/binary-tree-level-order-traversal.rs"

[[bin]]
name = "binary-tree-zigzag-level-order-traversal"
path = "src/binary-tree-zigzag-level-order-traversal.rs"

[[bin]]
name = "maximum-depth-of-binary-tree"
path = "src/maximum-depth-of-binary-tree.rs"

[[bin]]
name = "construct-binary-tree-from-preorder-and-inorder-traversal"
path = "src/construct-binary-tree-from-preorder-and-inorder-traversal.rs"

[[bin]]
name = "construct-binary-tree-from-inorder-and-postorder-traversal"
path = "src/construct-binary-tree-from-inorder-and-postorder-traversal.rs"

[[bin]]
name = "binary-tree-level-order-traversal-ii"
path = "src/binary-tree-level-order-traversal-ii.rs"

[[bin]]
name = "convert-sorted-array-to-binary-search-tree"
path = "src/convert-sorted-array-to-binary-search-tree.rs"

[[bin]]
name = "balanced-binary-tree"
path = "src/balanced-binary-tree.rs"

[[bin]]
name = "convert-sorted-list-to-binary-search-tree"
path = "src/convert-sorted-list-to-binary-search-tree.rs"

[[bin]]
name = "minimum-depth-of-binary-tree"
path = "src/minimum-depth-of-binary-tree.rs"

[[bin]]
name = "path-sum"
path = "src/path-sum.rs"

[[bin]]
name = "path-sum-ii"
path = "src/path-sum-ii.rs"

[[bin]]
name = "flatten-binary-tree-to-linked-list"
path = "src/flatten-binary-tree-to-linked-list.rs"

[[bin]]
name = "distinct-subsequences"
path = "src/distinct-subsequences.rs"

[[bin]]
name = "rotate-image"
path = "src/rotate-image.rs"

[[bin]]
name = "group-anagrams"
path = "src/group-anagrams.rs"

[[bin]]
name = "powx-n"
path = "src/powx-n.rs"

[[bin]]
name = "n-queens"
path = "src/n-queens.rs"

[[bin]]
name = "n-queens-ii"
path = "src/n-queens-ii.rs"

[[bin]]
name = "pascals-triangle"
path = "src/pascals-triangle.rs"

[[bin]]
name = "pascals-triangle-ii"
path = "src/pascals-triangle-ii.rs"

[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock"
path = "src/best-time-to-buy-and-sell-stock.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-ii"
path = "src/best-time-to-buy-and-sell-stock-ii.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-iii"
path = "src/best-time-to-buy-and-sell-stock-iii.rs"

[[bin]]
name = "binary-tree-maximum-path-sum"
path = "src/binary-tree-maximum-path-sum.rs"

[[bin]]
name = "valid-palindrome"
path = "src/valid-palindrome.rs"

[[bin]]
name = "surrounded-regions"
path = "src/surrounded-regions.rs"

[[bin]]
name = "longest-consecutive-sequence"
path = "src/longest-consecutive-sequence.rs"

[[bin]]
name = "sum-root-to-leaf-numbers"
path = "src/sum-root-to-leaf-numbers.rs"

[[bin]]
name = "palindrome-partitioning"
path = "src/palindrome-partitioning.rs"

[[bin]]
name = "gas-station"
path = "src/gas-station.rs"

[[bin]]
name = "candy"
path = "src/candy.rs"

[[bin]]
name = "single-number"
path = "src/single-number.rs"

[[bin]]
name = "single-number-ii"
path = "src/single-number-ii.rs"

[[bin]]
name = "word-break"
path = "src/word-break.rs"

[[bin]]
name = "word-break-ii"
path = "src/word-break-ii.rs"

[[bin]]
name = "insertion-sort-list"
path = "src/insertion-sort-list.rs"

[[bin]]
name = "sort-list"
path = "src/sort-list.rs"

[[bin]]
name = "max-points-on-a-line"
path = "src/max-points-on-a-line.rs"

[[bin]]
name = "reorder-list"
path = "src/reorder-list.rs"

[[bin]]
name = "binary-tree-preorder-traversal"
path = "src/binary-tree-preorder-traversal.rs"

[[bin]]
name = "binary-tree-postorder-traversal"
path = "src/binary-tree-postorder-traversal.rs"

[[bin]]
name = "largest-number"
path = "src/largest-number.rs"

[[bin]]
name = "lru-cache"
path = "src/lru-cache.rs"

[[bin]]
name = "evaluate-reverse-polish-notation"
path = "src/evaluate-reverse-polish-notation.rs"

[[bin]]
name = "reverse-words-in-a-string"
path = "src/reverse-words-in-a-string.rs"

[[bin]]
name = "maximum-product-subarray"
path = "src/maximum-product-subarray.rs"

[[bin]]
name = "find-minimum-in-rotated-sorted-array"
path = "src/find-minimum-in-rotated-sorted-array.rs"

[[bin]]
name = "min-stack"
path = "src/min-stack.rs"

[[bin]]
name = "find-peak-element"
path = "src/find-peak-element.rs"

[[bin]]
name = "maximum-gap"
path = "src/maximum-gap.rs"

[[bin]]
name = "two-sum-ii-input-array-is-sorted"
path = "src/two-sum-ii-input-array-is-sorted.rs"

[[bin]]
name = "excel-sheet-column-title"
path = "src/excel-sheet-column-title.rs"

[[bin]]
name = "majority-element"
path = "src/majority-element.rs"

[[bin]]
name = "excel-sheet-column-number"
path = "src/excel-sheet-column-number.rs"

[[bin]]
name = "factorial-trailing-zeroes"
path = "src/factorial-trailing-zeroes.rs"

[[bin]]
name = "binary-search-tree-iterator"
path = "src/binary-search-tree-iterator.rs"

[[bin]]
name = "dungeon-game"
path = "src/dungeon-game.rs"

[[bin]]
name = "find-minimum-in-rotated-sorted-array-ii"
path = "src/find-minimum-in-rotated-sorted-array-ii.rs"

[[bin]]
name = "compare-version-numbers"
path = "src/compare-version-numbers.rs"

[[bin]]
name = "fraction-to-recurring-decimal"
path = "src/fraction-to-recurring-decimal.rs"

[[bin]]
name = "repeated-dna-sequences"
path = "src/repeated-dna-sequences.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-iv"
path = "src/best-time-to-buy-and-sell-stock-iv.rs"

[[bin]]
name = "rotate-array"
path = "src/rotate-array.rs"

[[bin]]
name = "reverse-bits"
path = "src/reverse-bits.rs"

[[bin]]
name = "number-of-1-bits"
path = "src/number-of-1-bits.rs"

[[bin]]
name = "house-robber"
path = "src/house-robber.rs"

[[bin]]
name = "binary-tree-right-side-view"
path = "src/binary-tree-right-side-view.rs"

[[bin]]
name = "number-of-islands"
path = "src/number-of-islands.rs"

[[bin]]
name = "bitwise-and-of-numbers-range"
path = "src/bitwise-and-of-numbers-range.rs"

[[bin]]
name = "happy-number"
path = "src/happy-number.rs"

[[bin]]
name = "remove-linked-list-elements"
path = "src/remove-linked-list-elements.rs"

[[bin]]
name = "count-primes"
path = "src/count-primes.rs"

[[bin]]
name = "isomorphic-strings"
path = "src/isomorphic-strings.rs"

[[bin]]
name = "reverse-linked-list"
path = "src/reverse-linked-list.rs"

[[bin]]
name = "course-schedule"
path = "src/course-schedule.rs"

[[bin]]
name = "implement-trie-prefix-tree"
path = "src/implement-trie-prefix-tree.rs"

[[bin]]
name = "minimum-size-subarray-sum"
path = "src/minimum-size-subarray-sum.rs"

[[bin]]
name = "course-schedule-ii"
path = "src/course-schedule-ii.rs"

[[bin]]
name = "design-add-and-search-words-data-structure"
path = "src/design-add-and-search-words-data-structure.rs"

[[bin]]
name = "house-robber-ii"
path = "src/house-robber-ii.rs"

[[bin]]
name = "shortest-palindrome"
path = "src/shortest-palindrome.rs"

[[bin]]
name = "kth-largest-element-in-an-array"
path = "src/kth-largest-element-in-an-array.rs"

[[bin]]
name = "combination-sum-iii"
path = "src/combination-sum-iii.rs"

[[bin]]
name = "contains-duplicate"
path = "src/contains-duplicate.rs"

[[bin]]
name = "the-skyline-problem"
path = "src/the-skyline-problem.rs"

[[bin]]
name = "contains-duplicate-ii"
path = "src/contains-duplicate-ii.rs"

[[bin]]
name = "contains-duplicate-iii"
path = "src/contains-duplicate-iii.rs"

[[bin]]
name = "maximal-square"
path = "src/maximal-square.rs"

[[bin]]
name = "count-complete-tree-nodes"
path = "src/count-complete-tree-nodes.rs"

[[bin]]
name = "rectangle-area"
path = "src/rectangle-area.rs"

[[bin]]
name = "implement-stack-using-queues"
path = "src/implement-stack-using-queues.rs"

[[bin]]
name = "invert-binary-tree"
path = "src/invert-binary-tree.rs"

[[bin]]
name = "summary-ranges"
path = "src/summary-ranges.rs"

[[bin]]
name = "majority-element-ii"
path = "src/majority-element-ii.rs"

[[bin]]
name = "power-of-two"
path = "src/power-of-two.rs"

[[bin]]
name = "implement-queue-using-stacks"
path = "src/implement-queue-using-stacks.rs"

[[bin]]
name = "number-of-digit-one"
path = "src/number-of-digit-one.rs"

[[bin]]
name = "palindrome-linked-list"
path = "src/palindrome-linked-list.rs"

[[bin]]
name = "product-of-array-except-self"
path = "src/product-of-array-except-self.rs"

[[bin]]
name = "sliding-window-maximum"
path = "src/sliding-window-maximum.rs"

[[bin]]
name = "search-a-2d-matrix-ii"
path = "src/search-a-2d-matrix-ii.rs"

[[bin]]
name = "valid-anagram"
path = "src/valid-anagram.rs"

[[bin]]
name = "binary-tree-paths"
path = "src/binary-tree-paths.rs"

[[bin]]
name = "add-digits"
path = "src/add-digits.rs"

[[bin]]
name = "ugly-number"
path = "src/ugly-number.rs"

[[bin]]
name = "ugly-number-ii"
path = "src/ugly-number-ii.rs"

[[bin]]
name = "missing-number"
path = "src/missing-number.rs"

[[bin]]
name = "move-zeroes"
path = "src/move-zeroes.rs"
