[package]
name = "leetcode"
version = "0.1.0"
authors = ["akaishi <galigalikun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[[bin]]
name = "two-sum"
path = "src/two-sum.rs"

[[bin]]
name = "add-two-numbers"
path = "src/add-two-numbers.rs"

[[bin]]
name = "longest-substring-without-repeating-characters"
path = "src/longest-substring-without-repeating-characters.rs"

[[bin]]
name = "median-of-two-sorted-arrays"
path = "src/median-of-two-sorted-arrays.rs"

[[bin]]
name = "longest-palindromic-substring"
path = "src/longest-palindromic-substring.rs"

[[bin]]
name = "zigzag-conversion"
path = "src/zigzag-conversion.rs"

[[bin]]
name = "reverse-integer"
path = "src/reverse-integer.rs"

[[bin]]
name = "string-to-integer-atoi"
path = "src/string-to-integer-atoi.rs"

[[bin]]
name = "palindrome-number"
path = "src/palindrome-number.rs"

[[bin]]
name = "regular-expression-matching"
path = "src/regular-expression-matching.rs"

[[bin]]
name = "container-with-most-water"
path = "src/container-with-most-water.rs"

[[bin]]
name = "integer-to-roman"
path = "src/integer-to-roman.rs"

[[bin]]
name = "roman-to-integer"
path = "src/roman-to-integer.rs"

[[bin]]
name = "longest-common-prefix"
path = "src/longest-common-prefix.rs"

[[bin]]
name = "3sum"
path = "src/3sum.rs"

[[bin]]
name = "3sum-closest"
path = "src/3sum-closest.rs"

[[bin]]
name = "4sum"
path = "src/4sum.rs"

[[bin]]
name = "letter-combinations-of-a-phone-number"
path = "src/letter-combinations-of-a-phone-number.rs"

[[bin]]
name = "remove-nth-node-from-end-of-list"
path = "src/remove-nth-node-from-end-of-list.rs"

[[bin]]
name = "valid-parentheses"
path = "src/valid-parentheses.rs"

[[bin]]
name = "merge-two-sorted-lists"
path = "src/merge-two-sorted-lists.rs"

[[bin]]
name = "generate-parentheses"
path = "src/generate-parentheses.rs"

[[bin]]
name = "merge-k-sorted-lists"
path = "src/merge-k-sorted-lists.rs"

[[bin]]
name = "swap-nodes-in-pairs"
path = "src/swap-nodes-in-pairs.rs"

[[bin]]
name = "reverse-nodes-in-k-group"
path = "src/reverse-nodes-in-k-group.rs"

[[bin]]
name = "remove-duplicates-from-sorted-array"
path = "src/remove-duplicates-from-sorted-array.rs"

[[bin]]
name = "remove-element"
path = "src/remove-element.rs"

[[bin]]
name = "implement-strstr"
path = "src/implement-strstr.rs"

[[bin]]
name = "divide-two-integers"
path = "src/divide-two-integers.rs"

[[bin]]
name = "next-permutation"
path = "src/next-permutation.rs"

[[bin]]
name = "substring-with-concatenation-of-all-words"
path = "src/substring-with-concatenation-of-all-words.rs"

[[bin]]
name = "longest-valid-parentheses"
path = "src/longest-valid-parentheses.rs"

[[bin]]
name = "search-in-rotated-sorted-array"
path = "src/search-in-rotated-sorted-array.rs"

[[bin]]
name = "find-first-and-last-position-of-element-in-sorted-array"
path = "src/find-first-and-last-position-of-element-in-sorted-array.rs"

[[bin]]
name = "search-insert-position"
path = "src/search-insert-position.rs"

[[bin]]
name = "valid-sudoku"
path = "src/valid-sudoku.rs"

[[bin]]
name = "sudoku-solver"
path = "src/sudoku-solver.rs"

[[bin]]
name = "count-and-say"
path = "src/count-and-say.rs"

[[bin]]
name = "combination-sum"
path = "src/combination-sum.rs"

[[bin]]
name = "combination-sum-ii"
path = "src/combination-sum-ii.rs"

[[bin]]
name = "first-missing-positive"
path = "src/first-missing-positive.rs"

[[bin]]
name = "trapping-rain-water"
path = "src/trapping-rain-water.rs"

[[bin]]
name = "multiply-strings"
path = "src/multiply-strings.rs"

[[bin]]
name = "wildcard-matching"
path = "src/wildcard-matching.rs"

[[bin]]
name = "jump-game-ii"
path = "src/jump-game-ii.rs"

[[bin]]
name = "merge-intervals"
path = "src/merge-intervals.rs"

[[bin]]
name = "insert-interval"
path = "src/insert-interval.rs"

[[bin]]
name = "maximum-subarray"
path = "src/maximum-subarray.rs"

[[bin]]
name = "spiral-matrix"
path = "src/spiral-matrix.rs"

[[bin]]
name = "jump-game"
path = "src/jump-game.rs"

[[bin]]
name = "permutations"
path = "src/permutations.rs"

[[bin]]
name = "permutations-ii"
path = "src/permutations-ii.rs"

[[bin]]
name = "length-of-last-word"
path = "src/length-of-last-word.rs"

[[bin]]
name = "spiral-matrix-ii"
path = "src/spiral-matrix-ii.rs"

[[bin]]
name = "permutation-sequence"
path = "src/permutation-sequence.rs"

[[bin]]
name = "rotate-list"
path = "src/rotate-list.rs"

[[bin]]
name = "unique-paths"
path = "src/unique-paths.rs"

[[bin]]
name = "unique-paths-ii"
path = "src/unique-paths-ii.rs"

[[bin]]
name = "minimum-path-sum"
path = "src/minimum-path-sum.rs"

[[bin]]
name = "valid-number"
path = "src/valid-number.rs"

[[bin]]
name = "plus-one"
path = "src/plus-one.rs"

[[bin]]
name = "add-binary"
path = "src/add-binary.rs"

[[bin]]
name = "text-justification"
path = "src/text-justification.rs"

[[bin]]
name = "sqrtx"
path = "src/sqrtx.rs"

[[bin]]
name = "climbing-stairs"
path = "src/climbing-stairs.rs"

[[bin]]
name = "simplify-path"
path = "src/simplify-path.rs"

[[bin]]
name = "edit-distance"
path = "src/edit-distance.rs"

[[bin]]
name = "set-matrix-zeroes"
path = "src/set-matrix-zeroes.rs"

[[bin]]
name = "search-a-2d-matrix"
path = "src/search-a-2d-matrix.rs"

[[bin]]
name = "sort-colors"
path = "src/sort-colors.rs"

[[bin]]
name = "minimum-window-substring"
path = "src/minimum-window-substring.rs"

[[bin]]
name = "combinations"
path = "src/combinations.rs"

[[bin]]
name = "subsets"
path = "src/subsets.rs"

[[bin]]
name = "word-search"
path = "src/word-search.rs"

[[bin]]
name = "remove-duplicates-from-sorted-array-ii"
path = "src/remove-duplicates-from-sorted-array-ii.rs"

[[bin]]
name = "search-in-rotated-sorted-array-ii"
path = "src/search-in-rotated-sorted-array-ii.rs"

[[bin]]
name = "remove-duplicates-from-sorted-list-ii"
path = "src/remove-duplicates-from-sorted-list-ii.rs"

[[bin]]
name = "remove-duplicates-from-sorted-list"
path = "src/remove-duplicates-from-sorted-list.rs"

[[bin]]
name = "largest-rectangle-in-histogram"
path = "src/largest-rectangle-in-histogram.rs"

[[bin]]
name = "maximal-rectangle"
path = "src/maximal-rectangle.rs"

[[bin]]
name = "partition-list"
path = "src/partition-list.rs"

[[bin]]
name = "scramble-string"
path = "src/scramble-string.rs"

[[bin]]
name = "merge-sorted-array"
path = "src/merge-sorted-array.rs"

[[bin]]
name = "gray-code"
path = "src/gray-code.rs"

[[bin]]
name = "subsets-ii"
path = "src/subsets-ii.rs"

[[bin]]
name = "decode-ways"
path = "src/decode-ways.rs"

[[bin]]
name = "reverse-linked-list-ii"
path = "src/reverse-linked-list-ii.rs"

[[bin]]
name = "restore-ip-addresses"
path = "src/restore-ip-addresses.rs"

[[bin]]
name = "binary-tree-inorder-traversal"
path = "src/binary-tree-inorder-traversal.rs"

[[bin]]
name = "unique-binary-search-trees-ii"
path = "src/unique-binary-search-trees-ii.rs"

[[bin]]
name = "unique-binary-search-trees"
path = "src/unique-binary-search-trees.rs"

[[bin]]
name = "interleaving-string"
path = "src/interleaving-string.rs"

[[bin]]
name = "validate-binary-search-tree"
path = "src/validate-binary-search-tree.rs"

[[bin]]
name = "recover-binary-search-tree"
path = "src/recover-binary-search-tree.rs"

[[bin]]
name = "same-tree"
path = "src/same-tree.rs"

[[bin]]
name = "symmetric-tree"
path = "src/symmetric-tree.rs"

[[bin]]
name = "binary-tree-level-order-traversal"
path = "src/binary-tree-level-order-traversal.rs"

[[bin]]
name = "binary-tree-zigzag-level-order-traversal"
path = "src/binary-tree-zigzag-level-order-traversal.rs"

[[bin]]
name = "maximum-depth-of-binary-tree"
path = "src/maximum-depth-of-binary-tree.rs"

[[bin]]
name = "construct-binary-tree-from-preorder-and-inorder-traversal"
path = "src/construct-binary-tree-from-preorder-and-inorder-traversal.rs"

[[bin]]
name = "construct-binary-tree-from-inorder-and-postorder-traversal"
path = "src/construct-binary-tree-from-inorder-and-postorder-traversal.rs"

[[bin]]
name = "binary-tree-level-order-traversal-ii"
path = "src/binary-tree-level-order-traversal-ii.rs"

[[bin]]
name = "convert-sorted-array-to-binary-search-tree"
path = "src/convert-sorted-array-to-binary-search-tree.rs"

[[bin]]
name = "balanced-binary-tree"
path = "src/balanced-binary-tree.rs"

[[bin]]
name = "convert-sorted-list-to-binary-search-tree"
path = "src/convert-sorted-list-to-binary-search-tree.rs"

[[bin]]
name = "minimum-depth-of-binary-tree"
path = "src/minimum-depth-of-binary-tree.rs"

[[bin]]
name = "path-sum"
path = "src/path-sum.rs"

[[bin]]
name = "path-sum-ii"
path = "src/path-sum-ii.rs"

[[bin]]
name = "flatten-binary-tree-to-linked-list"
path = "src/flatten-binary-tree-to-linked-list.rs"

[[bin]]
name = "distinct-subsequences"
path = "src/distinct-subsequences.rs"

[[bin]]
name = "rotate-image"
path = "src/rotate-image.rs"

[[bin]]
name = "group-anagrams"
path = "src/group-anagrams.rs"

[[bin]]
name = "powx-n"
path = "src/powx-n.rs"

[[bin]]
name = "n-queens"
path = "src/n-queens.rs"

[[bin]]
name = "n-queens-ii"
path = "src/n-queens-ii.rs"

[[bin]]
name = "pascals-triangle"
path = "src/pascals-triangle.rs"

[[bin]]
name = "pascals-triangle-ii"
path = "src/pascals-triangle-ii.rs"

[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock"
path = "src/best-time-to-buy-and-sell-stock.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-ii"
path = "src/best-time-to-buy-and-sell-stock-ii.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-iii"
path = "src/best-time-to-buy-and-sell-stock-iii.rs"

[[bin]]
name = "binary-tree-maximum-path-sum"
path = "src/binary-tree-maximum-path-sum.rs"

[[bin]]
name = "valid-palindrome"
path = "src/valid-palindrome.rs"

[[bin]]
name = "surrounded-regions"
path = "src/surrounded-regions.rs"

[[bin]]
name = "longest-consecutive-sequence"
path = "src/longest-consecutive-sequence.rs"

[[bin]]
name = "sum-root-to-leaf-numbers"
path = "src/sum-root-to-leaf-numbers.rs"

[[bin]]
name = "palindrome-partitioning"
path = "src/palindrome-partitioning.rs"

[[bin]]
name = "gas-station"
path = "src/gas-station.rs"

[[bin]]
name = "candy"
path = "src/candy.rs"

[[bin]]
name = "single-number"
path = "src/single-number.rs"

[[bin]]
name = "single-number-ii"
path = "src/single-number-ii.rs"

[[bin]]
name = "word-break"
path = "src/word-break.rs"

[[bin]]
name = "word-break-ii"
path = "src/word-break-ii.rs"

[[bin]]
name = "insertion-sort-list"
path = "src/insertion-sort-list.rs"

[[bin]]
name = "sort-list"
path = "src/sort-list.rs"

[[bin]]
name = "max-points-on-a-line"
path = "src/max-points-on-a-line.rs"

[[bin]]
name = "reorder-list"
path = "src/reorder-list.rs"

[[bin]]
name = "binary-tree-preorder-traversal"
path = "src/binary-tree-preorder-traversal.rs"

[[bin]]
name = "binary-tree-postorder-traversal"
path = "src/binary-tree-postorder-traversal.rs"

[[bin]]
name = "largest-number"
path = "src/largest-number.rs"

[[bin]]
name = "lru-cache"
path = "src/lru-cache.rs"

[[bin]]
name = "evaluate-reverse-polish-notation"
path = "src/evaluate-reverse-polish-notation.rs"

[[bin]]
name = "reverse-words-in-a-string"
path = "src/reverse-words-in-a-string.rs"

[[bin]]
name = "maximum-product-subarray"
path = "src/maximum-product-subarray.rs"

[[bin]]
name = "find-minimum-in-rotated-sorted-array"
path = "src/find-minimum-in-rotated-sorted-array.rs"

[[bin]]
name = "min-stack"
path = "src/min-stack.rs"

[[bin]]
name = "find-peak-element"
path = "src/find-peak-element.rs"

[[bin]]
name = "maximum-gap"
path = "src/maximum-gap.rs"

[[bin]]
name = "two-sum-ii-input-array-is-sorted"
path = "src/two-sum-ii-input-array-is-sorted.rs"

[[bin]]
name = "excel-sheet-column-title"
path = "src/excel-sheet-column-title.rs"

[[bin]]
name = "majority-element"
path = "src/majority-element.rs"

[[bin]]
name = "excel-sheet-column-number"
path = "src/excel-sheet-column-number.rs"

[[bin]]
name = "factorial-trailing-zeroes"
path = "src/factorial-trailing-zeroes.rs"

[[bin]]
name = "binary-search-tree-iterator"
path = "src/binary-search-tree-iterator.rs"

[[bin]]
name = "dungeon-game"
path = "src/dungeon-game.rs"

[[bin]]
name = "find-minimum-in-rotated-sorted-array-ii"
path = "src/find-minimum-in-rotated-sorted-array-ii.rs"

[[bin]]
name = "compare-version-numbers"
path = "src/compare-version-numbers.rs"

[[bin]]
name = "fraction-to-recurring-decimal"
path = "src/fraction-to-recurring-decimal.rs"

[[bin]]
name = "repeated-dna-sequences"
path = "src/repeated-dna-sequences.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-iv"
path = "src/best-time-to-buy-and-sell-stock-iv.rs"

[[bin]]
name = "rotate-array"
path = "src/rotate-array.rs"

[[bin]]
name = "reverse-bits"
path = "src/reverse-bits.rs"

[[bin]]
name = "number-of-1-bits"
path = "src/number-of-1-bits.rs"

[[bin]]
name = "house-robber"
path = "src/house-robber.rs"

[[bin]]
name = "binary-tree-right-side-view"
path = "src/binary-tree-right-side-view.rs"

[[bin]]
name = "number-of-islands"
path = "src/number-of-islands.rs"

[[bin]]
name = "bitwise-and-of-numbers-range"
path = "src/bitwise-and-of-numbers-range.rs"

[[bin]]
name = "happy-number"
path = "src/happy-number.rs"

[[bin]]
name = "remove-linked-list-elements"
path = "src/remove-linked-list-elements.rs"

[[bin]]
name = "count-primes"
path = "src/count-primes.rs"

[[bin]]
name = "isomorphic-strings"
path = "src/isomorphic-strings.rs"

[[bin]]
name = "reverse-linked-list"
path = "src/reverse-linked-list.rs"

[[bin]]
name = "course-schedule"
path = "src/course-schedule.rs"

[[bin]]
name = "implement-trie-prefix-tree"
path = "src/implement-trie-prefix-tree.rs"

[[bin]]
name = "minimum-size-subarray-sum"
path = "src/minimum-size-subarray-sum.rs"

[[bin]]
name = "course-schedule-ii"
path = "src/course-schedule-ii.rs"

[[bin]]
name = "design-add-and-search-words-data-structure"
path = "src/design-add-and-search-words-data-structure.rs"

[[bin]]
name = "house-robber-ii"
path = "src/house-robber-ii.rs"

[[bin]]
name = "shortest-palindrome"
path = "src/shortest-palindrome.rs"

[[bin]]
name = "kth-largest-element-in-an-array"
path = "src/kth-largest-element-in-an-array.rs"

[[bin]]
name = "combination-sum-iii"
path = "src/combination-sum-iii.rs"

[[bin]]
name = "contains-duplicate"
path = "src/contains-duplicate.rs"

[[bin]]
name = "the-skyline-problem"
path = "src/the-skyline-problem.rs"

[[bin]]
name = "contains-duplicate-ii"
path = "src/contains-duplicate-ii.rs"

[[bin]]
name = "contains-duplicate-iii"
path = "src/contains-duplicate-iii.rs"

[[bin]]
name = "maximal-square"
path = "src/maximal-square.rs"

[[bin]]
name = "count-complete-tree-nodes"
path = "src/count-complete-tree-nodes.rs"

[[bin]]
name = "rectangle-area"
path = "src/rectangle-area.rs"

[[bin]]
name = "implement-stack-using-queues"
path = "src/implement-stack-using-queues.rs"

[[bin]]
name = "invert-binary-tree"
path = "src/invert-binary-tree.rs"

[[bin]]
name = "kth-smallest-element-in-a-bst"
path = "src/kth-smallest-element-in-a-bst.rs"

[[bin]]
name = "summary-ranges"
path = "src/summary-ranges.rs"

[[bin]]
name = "majority-element-ii"
path = "src/majority-element-ii.rs"

[[bin]]
name = "power-of-two"
path = "src/power-of-two.rs"

[[bin]]
name = "implement-queue-using-stacks"
path = "src/implement-queue-using-stacks.rs"

[[bin]]
name = "number-of-digit-one"
path = "src/number-of-digit-one.rs"

[[bin]]
name = "palindrome-linked-list"
path = "src/palindrome-linked-list.rs"

[[bin]]
name = "lowest-common-ancestor-of-a-binary-search-tree"
path = "src/lowest-common-ancestor-of-a-binary-search-tree.rs"

[[bin]]
name = "lowest-common-ancestor-of-a-binary-tree"
path = "src/lowest-common-ancestor-of-a-binary-tree.rs"

[[bin]]
name = "product-of-array-except-self"
path = "src/product-of-array-except-self.rs"

[[bin]]
name = "sliding-window-maximum"
path = "src/sliding-window-maximum.rs"

[[bin]]
name = "search-a-2d-matrix-ii"
path = "src/search-a-2d-matrix-ii.rs"

[[bin]]
name = "different-ways-to-add-parentheses"
path = "src/different-ways-to-add-parentheses.rs"

[[bin]]
name = "valid-anagram"
path = "src/valid-anagram.rs"

[[bin]]
name = "binary-tree-paths"
path = "src/binary-tree-paths.rs"

[[bin]]
name = "add-digits"
path = "src/add-digits.rs"

[[bin]]
name = "single-number-iii"
path = "src/single-number-iii.rs"

[[bin]]
name = "ugly-number"
path = "src/ugly-number.rs"

[[bin]]
name = "ugly-number-ii"
path = "src/ugly-number-ii.rs"

[[bin]]
name = "missing-number"
path = "src/missing-number.rs"

[[bin]]
name = "integer-to-english-words"
path = "src/integer-to-english-words.rs"

[[bin]]
name = "h-index"
path = "src/h-index.rs"

[[bin]]
name = "h-index-ii"
path = "src/h-index-ii.rs"

[[bin]]
name = "perfect-squares"
path = "src/perfect-squares.rs"

[[bin]]
name = "expression-add-operators"
path = "src/expression-add-operators.rs"

[[bin]]
name = "move-zeroes"
path = "src/move-zeroes.rs"

[[bin]]
name = "find-the-duplicate-number"
path = "src/find-the-duplicate-number.rs"

[[bin]]
name = "game-of-life"
path = "src/game-of-life.rs"

[[bin]]
name = "word-pattern"
path = "src/word-pattern.rs"

[[bin]]
name = "nim-game"
path = "src/nim-game.rs"

[[bin]]
name = "find-median-from-data-stream"
path = "src/find-median-from-data-stream.rs"

[[bin]]
name = "serialize-and-deserialize-binary-tree"
path = "src/serialize-and-deserialize-binary-tree.rs"

[[bin]]
name = "bulls-and-cows"
path = "src/bulls-and-cows.rs"

[[bin]]
name = "longest-increasing-subsequence"
path = "src/longest-increasing-subsequence.rs"

[[bin]]
name = "remove-invalid-parentheses"
path = "src/remove-invalid-parentheses.rs"

[[bin]]
name = "range-sum-query-immutable"
path = "src/range-sum-query-immutable.rs"

[[bin]]
name = "range-sum-query-2d-immutable"
path = "src/range-sum-query-2d-immutable.rs"

[[bin]]
name = "additive-number"
path = "src/additive-number.rs"

[[bin]]
name = "range-sum-query-mutable"
path = "src/range-sum-query-mutable.rs"

[[bin]]
name = "best-time-to-buy-and-sell-stock-with-cooldown"
path = "src/best-time-to-buy-and-sell-stock-with-cooldown.rs"

[[bin]]
name = "minimum-height-trees"
path = "src/minimum-height-trees.rs"

[[bin]]
name = "burst-balloons"
path = "src/burst-balloons.rs"

[[bin]]
name = "super-ugly-number"
path = "src/super-ugly-number.rs"

[[bin]]
name = "count-of-smaller-numbers-after-self"
path = "src/count-of-smaller-numbers-after-self.rs"

[[bin]]
name = "remove-duplicate-letters"
path = "src/remove-duplicate-letters.rs"

[[bin]]
name = "maximum-product-of-word-lengths"
path = "src/maximum-product-of-word-lengths.rs"

[[bin]]
name = "bulb-switcher"
path = "src/bulb-switcher.rs"

[[bin]]
name = "create-maximum-number"
path = "src/create-maximum-number.rs"

[[bin]]
name = "coin-change"
path = "src/coin-change.rs"

[[bin]]
name = "wiggle-sort-ii"
path = "src/wiggle-sort-ii.rs"

[[bin]]
name = "power-of-three"
path = "src/power-of-three.rs"

[[bin]]
name = "count-of-range-sum"
path = "src/count-of-range-sum.rs"

[[bin]]
name = "odd-even-linked-list"
path = "src/odd-even-linked-list.rs"

[[bin]]
name = "longest-increasing-path-in-a-matrix"
path = "src/longest-increasing-path-in-a-matrix.rs"

[[bin]]
name = "patching-array"
path = "src/patching-array.rs"

[[bin]]
name = "verify-preorder-serialization-of-a-binary-tree"
path = "src/verify-preorder-serialization-of-a-binary-tree.rs"

[[bin]]
name = "reconstruct-itinerary"
path = "src/reconstruct-itinerary.rs"

[[bin]]
name = "increasing-triplet-subsequence"
path = "src/increasing-triplet-subsequence.rs"

[[bin]]
name = "self-crossing"
path = "src/self-crossing.rs"

[[bin]]
name = "palindrome-pairs"
path = "src/palindrome-pairs.rs"

[[bin]]
name = "house-robber-iii"
path = "src/house-robber-iii.rs"

[[bin]]
name = "counting-bits"
path = "src/counting-bits.rs"

[[bin]]
name = "flatten-nested-list-iterator"
path = "src/flatten-nested-list-iterator.rs"

[[bin]]
name = "power-of-four"
path = "src/power-of-four.rs"

[[bin]]
name = "integer-break"
path = "src/integer-break.rs"

[[bin]]
name = "reverse-string"
path = "src/reverse-string.rs"

[[bin]]
name = "reverse-vowels-of-a-string"
path = "src/reverse-vowels-of-a-string.rs"

[[bin]]
name = "top-k-frequent-elements"
path = "src/top-k-frequent-elements.rs"

[[bin]]
name = "intersection-of-two-arrays"
path = "src/intersection-of-two-arrays.rs"

[[bin]]
name = "intersection-of-two-arrays-ii"
path = "src/intersection-of-two-arrays-ii.rs"

[[bin]]
name = "data-stream-as-disjoint-intervals"
path = "src/data-stream-as-disjoint-intervals.rs"

[[bin]]
name = "russian-doll-envelopes"
path = "src/russian-doll-envelopes.rs"

[[bin]]
name = "design-twitter"
path = "src/design-twitter.rs"

[[bin]]
name = "count-numbers-with-unique-digits"
path = "src/count-numbers-with-unique-digits.rs"

[[bin]]
name = "max-sum-of-rectangle-no-larger-than-k"
path = "src/max-sum-of-rectangle-no-larger-than-k.rs"

[[bin]]
name = "water-and-jug-problem"
path = "src/water-and-jug-problem.rs"

[[bin]]
name = "valid-perfect-square"
path = "src/valid-perfect-square.rs"

[[bin]]
name = "largest-divisible-subset"
path = "src/largest-divisible-subset.rs"

[[bin]]
name = "sum-of-two-integers"
path = "src/sum-of-two-integers.rs"

[[bin]]
name = "super-pow"
path = "src/super-pow.rs"

[[bin]]
name = "find-k-pairs-with-smallest-sums"
path = "src/find-k-pairs-with-smallest-sums.rs"

[[bin]]
name = "guess-number-higher-or-lower"
path = "src/guess-number-higher-or-lower.rs"

[[bin]]
name = "guess-number-higher-or-lower-ii"
path = "src/guess-number-higher-or-lower-ii.rs"

[[bin]]
name = "wiggle-subsequence"
path = "src/wiggle-subsequence.rs"

[[bin]]
name = "combination-sum-iv"
path = "src/combination-sum-iv.rs"

[[bin]]
name = "insert-delete-getrandom-o1"
path = "src/insert-delete-getrandom-o1.rs"

[[bin]]
name = "insert-delete-getrandom-o1-duplicates-allowed"
path = "src/insert-delete-getrandom-o1-duplicates-allowed.rs"

[[bin]]
name = "kth-smallest-element-in-a-sorted-matrix"
path = "src/kth-smallest-element-in-a-sorted-matrix.rs"

[[bin]]
name = "ransom-note"
path = "src/ransom-note.rs"

[[bin]]
name = "shuffle-an-array"
path = "src/shuffle-an-array.rs"

[[bin]]
name = "mini-parser"
path = "src/mini-parser.rs"

[[bin]]
name = "lexicographical-numbers"
path = "src/lexicographical-numbers.rs"

[[bin]]
name = "first-unique-character-in-a-string"
path = "src/first-unique-character-in-a-string.rs"

[[bin]]
name = "longest-absolute-file-path"
path = "src/longest-absolute-file-path.rs"

[[bin]]
name = "find-the-difference"
path = "src/find-the-difference.rs"

[[bin]]
name = "elimination-game"
path = "src/elimination-game.rs"

[[bin]]
name = "perfect-rectangle"
path = "src/perfect-rectangle.rs"

[[bin]]
name = "is-subsequence"
path = "src/is-subsequence.rs"

[[bin]]
name = "utf-8-validation"
path = "src/utf-8-validation.rs"

[[bin]]
name = "decode-string"
path = "src/decode-string.rs"

[[bin]]
name = "longest-substring-with-at-least-k-repeating-characters"
path = "src/longest-substring-with-at-least-k-repeating-characters.rs"

[[bin]]
name = "rotate-function"
path = "src/rotate-function.rs"

[[bin]]
name = "integer-replacement"
path = "src/integer-replacement.rs"

[[bin]]
name = "random-pick-index"
path = "src/random-pick-index.rs"

[[bin]]
name = "evaluate-division"
path = "src/evaluate-division.rs"

[[bin]]
name = "nth-digit"
path = "src/nth-digit.rs"

[[bin]]
name = "binary-watch"
path = "src/binary-watch.rs"

[[bin]]
name = "remove-k-digits"
path = "src/remove-k-digits.rs"

[[bin]]
name = "frog-jump"
path = "src/frog-jump.rs"

[[bin]]
name = "sum-of-left-leaves"
path = "src/sum-of-left-leaves.rs"

[[bin]]
name = "convert-a-number-to-hexadecimal"
path = "src/convert-a-number-to-hexadecimal.rs"

[[bin]]
name = "queue-reconstruction-by-height"
path = "src/queue-reconstruction-by-height.rs"

[[bin]]
name = "trapping-rain-water-ii"
path = "src/trapping-rain-water-ii.rs"

[[bin]]
name = "longest-palindrome"
path = "src/longest-palindrome.rs"

[[bin]]
name = "split-array-largest-sum"
path = "src/split-array-largest-sum.rs"

[[bin]]
name = "fizz-buzz"
path = "src/fizz-buzz.rs"

[[bin]]
name = "arithmetic-slices"
path = "src/arithmetic-slices.rs"

[[bin]]
name = "third-maximum-number"
path = "src/third-maximum-number.rs"

[[bin]]
name = "add-strings"
path = "src/add-strings.rs"

[[bin]]
name = "pacific-atlantic-water-flow"
path = "src/pacific-atlantic-water-flow.rs"

[[bin]]
name = "battleships-in-a-board"
path = "src/battleships-in-a-board.rs"

[[bin]]
name = "strong-password-checker"
path = "src/strong-password-checker.rs"

[[bin]]
name = "maximum-xor-of-two-numbers-in-an-array"
path = "src/maximum-xor-of-two-numbers-in-an-array.rs"

[[bin]]
name = "reconstruct-original-digits-from-english"
path = "src/reconstruct-original-digits-from-english.rs"

[[bin]]
name = "longest-repeating-character-replacement"
path = "src/longest-repeating-character-replacement.rs"

[[bin]]
name = "minimum-genetic-mutation"
path = "src/minimum-genetic-mutation.rs"

[[bin]]
name = "number-of-segments-in-a-string"
path = "src/number-of-segments-in-a-string.rs"

[[bin]]
name = "non-overlapping-intervals"
path = "src/non-overlapping-intervals.rs"

[[bin]]
name = "find-right-interval"
path = "src/find-right-interval.rs"

[[bin]]
name = "path-sum-iii"
path = "src/path-sum-iii.rs"

[[bin]]
name = "find-all-anagrams-in-a-string"
path = "src/find-all-anagrams-in-a-string.rs"

[[bin]]
name = "k-th-smallest-in-lexicographical-order"
path = "src/k-th-smallest-in-lexicographical-order.rs"

[[bin]]
name = "arranging-coins"
path = "src/arranging-coins.rs"

[[bin]]
name = "find-all-duplicates-in-an-array"
path = "src/find-all-duplicates-in-an-array.rs"
